src/index.css
/* ... */
html {
  scrollbar-gutter: stable;
}

:root {
  --textBlack: #333333;
  --textBlackLight: rgba(51, 51, 51, 0.5); /* це колір #333333 з opacity 0.5*/
  --textWhite: #ffffff;
  --textMediumWhite: #ecf0f6;
  --textOther: #288dd5;
  --button: #bfdef5;
  --backgroundMain: #fdfeff;
  /* --backgroundSecondary: #eceff6; */
  --backgroundTertiary: #f7f8fb;
  --iconHover: #436b88;
  --iconFill: #000;
  --errorColor: #fc8972;
  --color1: #c6e7ff;
  --color1-transparent: rgba(198, 231, 255, 0.4);
  --color2: #fc8972;
  --color2-transparent: rgba(252, 137, 114, 0.4);
  --color3: #feee91;
  --color3-transparent: rgba(254, 238, 145, 0.4);
  --color4: #cdc1ff;
  --color4-transparent: rgba(205, 193, 255, 0.4);
  --color5: #d0e8c5;
  --color5-transparent: rgba(208, 232, 197, 0.4);
  --color6: #a6aebf;
  --color6-transparent: rgba(166, 174, 191, 0.4);
  --color7: #b1d690;
  --color7-transparent: rgba(177, 214, 144, 0.4);
  /* --color7Light: rgba(177, 214, 144, 0.3); */
  --color8: #76925d;
  --color9: #dbdcdd;
  --color9-transparent: rgba(219, 220, 221, 0.4);
  --form-background: rgba(255, 255, 255, 0.5);
}

.dark {
  --textBlack: #ecf0f6;
  --textBlackLight: rgba(236, 240, 246, 0.5);
  /* це колір #333333 з opacity 0.5*/
  --textWhite: #333333;
  --textMediumWhite: #333333;
  --textOther: #b3c6d3;
  --button: #134e79;
  --errorColor: rgba(252, 137, 114, 0.7);
  --backgroundMain: #252a34;
  /* --backgroundSecondary: #eceff6; */
  /* --backgroundSecondary: #5f687c */
  --backgroundTertiary: #292d36;
  --iconHover: #436b88;
  --iconFill: #ecf0f6;
  --color1: #3b454d;
  --color1-transparent: rgba(59, 69, 77, 0.4);
  --color2: #4c2922;
  --color2-transparent: rgba(76, 41, 34, 0.4);
  --color3: #4c472c;
  --color3-transparent: rgba(76, 71, 44, 0.4);
  --color4: #3e3a4d;
  --color4-transparent: rgba(62, 58, 77, 0.4);
  --color5: #3e463b;
  --color5-transparent: rgba(62, 70, 59, 0.4);
  --color6: #42464c;
  --color6-transparent: rgba(66, 70, 76, 0.4);
  --color7: #47563a;
  --color7-transparent: rgba(71, 86, 58, 0.4);
  /* --color7Light: rgba(116, 216, 28, 0.3); */
  --color8: #2f3a25;
  --color9: rgba(219, 220, 221, 0.3);
  --color9-transparent: rgba(219, 220, 221, 0.1);
  --form-background: rgba(93, 93, 93, 0.5);
}

body {
  @apply bg-backgroundMain;
}

.container {
  max-width: 120rem;
  @apply px-5 md:px-6;
}

.custom-hover {
  transition:
    fill 300ms ease-in-out,
    color 300ms ease-in-out,
    border-color 300ms ease-in-out,
    background-color 300ms ease-in-out,
    text-decoration-color 300ms ease-in-out;
}

.custom-size {
  transition:
    width 500ms ease-in-out,
    padding 500ms ease-in-out,
    margin 500ms ease-in-out,
    opacity 500ms ease-in-out,
    transform 500ms ease-in-out;
}

.custom-transition {
  transition:
    width 500ms ease-in-out,
    padding 500ms ease-in-out,
    margin 500ms ease-in-out,
    opacity 500ms ease-in-out,
    transform 300ms ease-in-out,
    fill 300ms ease-in-out,
    color 300ms ease-in-out,
    border-color 300ms ease-in-out,
    background-color 300ms ease-in-out;
}

/* Firefox cтилі для горизонтального скролу - не коректно працюють */
/*.scrollbar {
  overflow-x: auto;
  scrollbar-width: thin;
  scrollbar-color: #c2c2c2 #eaeef2;
} */

.scrollbar::-webkit-scrollbar {
  height: 8px;
  margin-top: 20px;
}

.scrollbar::-webkit-scrollbar-thumb {
  background-color: #c2c2c2;
  border-radius: 4px;
}
.dark .scrollbar::-webkit-scrollbar-thumb {
  background-color: var(--color9);
}

.scrollbar::-webkit-scrollbar-track {
  background-color: #eaeef2;
  border-radius: 4px;
}
.dark .scrollbar::-webkit-scrollbar-track {
  background-color: rgba(234, 238, 242, 0.3);
}

.scrollbar-y-sectionBox::-webkit-scrollbar {
  width: 6px;
}
@media screen and (min-width: 768px) {
  .scrollbar-y-sectionBox::-webkit-scrollbar {
    width: 8px;
  }
}
.scrollbar-y-sectionBox::-webkit-scrollbar-thumb {
  background-color: #c2c2c2;
  border-radius: 4px;
}
.dark .scrollbar-y-sectionBox::-webkit-scrollbar-thumb {
  background-color: var(--color9);
}
.scrollbar-y-sectionBox::-webkit-scrollbar-track {
  background-color: #eaeef2;
  border-radius: 4px;
}
.dark .scrollbar-y-sectionBox::-webkit-scrollbar-track {
  background-color: rgba(234, 238, 242, 0.3);
}
.scrollbar-y-sectionBox::-webkit-scrollbar-button {
  display: none;
}

/* notification animation react-toastify*/
.notificationAnimation-in {
  animation: notificationAnimation-in 1s ease-out both;
}
@keyframes notificationAnimation-in {
  0% {
    transform: translateY(-100px);
    opacity: 0;
  }
  100% {
    transform: translateY(0px);
    opacity: 1;
  }
}

.notificationAnimation-out {
  animation: notificationAnimation-out 1s ease-in both;
}
@keyframes notificationAnimation-out {
  0% {
    transform: translateY(0px);
    opacity: 1;
  }
  100% {
    transform: translateY(-100px);
    opacity: 0;
  }
}

/* react-calendar */
@media screen and (min-width: 1920px) {
  .job-cal .react-calendar__month-view__weekdays abbr,
  .job-cal abbr {
    font-size: 16px !important;
  }
  .job-cal .react-calendar__month-view__days > button {
    width: 40px !important;
    height: 40px !important;
  }
}

.react-calendar__navigation {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 14px;
  font-weight: 500;
}

.job-calendar .react-calendar__navigation {
  font-size: 20px;
  line-height: 160%;
}

.statistics-calendar .react-calendar__navigation {
  font-size: 16px;
  gap: 8px;
}
@media screen and (min-width: 768px) {
  .statistics-calendar .react-calendar__navigation {
    font-size: 20px;
    gap: 16px;
  }
}
/* @media screen and (min-width: 1280px) {
  .statistics-calendar .react-calendar__navigation {
    font-size: 20px;
    gap: 16px;
  }
} */
/* @media screen and (min-width: 1440px) {
  .statistics-calendar .react-calendar__navigation {
    font-size: 20px;
    gap: 16px;
  }
} */
@media screen and (min-width: 1920px) {
  .statistics-calendar .react-calendar__navigation {
    font-size: 28px;
  }
}
/* ... */

